[package]
name = "ultima"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modular-bitfield-msb = "0.11.2"
organum = { path = "organum" }
image = "0.24.5"
pixels = "0.11.0"
winit = "0.27.5"
winit_input_helper = "0.13.0"
log = "0.4.17"
codepage-437 = "0.1.0"
regex = "1.7.0"
clap = { version = "4.0.32", features = ["cargo"] }
